# vrep_template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
common/: CMakeLists.txt  linux_support.cpp  linux_support.h  matplotlibcpp.h  onlyforbuild.cpp  sys_log.cpp  sys_log.h  sys_thread.cpp  sys_thread.h
coppeliaSim-client/: CMakeLists.txt  CoppeliaSim.cpp  CoppeliaSim.h  CoppeliaSim_service.cpp  CoppeliaSim_service.h
coppeliaSim-client/common/: license.txt  luaFunctionData.cpp  luaFunctionDataItem.cpp  shared_memory.c  simLib.cpp  socketInConnection.cpp  socketOutConnection.cpp
coppeliaSim-client/common/stack/: stackArray.cpp  stackBool.cpp  stackMap.cpp  stackNull.cpp  stackNumber.cpp  stackObject.cpp  stackString.cpp
coppeliaSim-client/include/: license.txt  luaFunctionData.h  luaFunctionDataItem.h  scriptFunctionData.h  simConst.h  simLib.h  socketInConnection.h  socketOutConnection.h
coppeliaSim-client/include/stack/: stackArray.h  stackBool.h  stackMap.h  stackNull.h  stackNumber.h  stackObject.h  stackString.h
coppeliaSim-client/remoteApi/: license.txt
core_test/: CMakeLists.txt  car.cpp  car.h  chassis.cpp  chassis.h  gimble.cpp  gimble.h  two_wheel.cpp  two_wheel.h
core_test/common/: common.h
core_test/controller/: controller.cpp  controller.h  lqr_ctrl.cpp  lqr_ctrl.h  pid_ctrl.cpp  pid_ctrl.h
kernel/: CMakeLists.txt  gimble.cpp  gimble.h
kernel/common/: common.h
kernel/controller/: controller.h  lqr_ctrl.cpp  lqr_ctrl.h  pid_ctrl.cpp  pid_ctrl.h
model/: Infantry_Assassin.ttm  Infantry_Assassin.ttt
robot/: CMakeLists.txt
sim/: Infantry_Assassin.ttm  Infantry_Assassin.ttt  car.ttt  kr3.ttt  test_simulation.ttt
